Fix: Incorrect topbar brand left alignment

--- a/themes/Clean/less/bootstrap/grid.less
+++ b/themes/Clean/less/bootstrap/grid.less
@@ -1,9 +1,6 @@
 .container {
   @media (min-width: 768px) {
-    width: calc(100% - 0);
-  }
-  @media (min-width: 992px) {
-    width: calc(100% - 15px);
+    width: 100%;
   }
   @media (min-width: @screen-lg-min) {
     width: calc(100% - 45px);
